fixed fotter spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -423,8 +423,8 @@ button{
   }
     
   .logo {
-      height: 100px;
-      width: 100px;
+      height: 60px;
+      width: 60px;
   }
 
   
